cpp/manager.h

/* 供 C / Python ctypes 调用的统一句柄类型 */
typedef void* tc_player_round_t;
HandResult tc_search_pattern(int position, const int* cards, int cnt);
int tc_dfs_enum_combos(const int hand13[13], DFSCandResult* out, int max_k);
/* -------------------- PlayerRound -------------------- */
tc_player_round_t tc_player_round_create(const char* name);
void tc_player_round_destroy(tc_player_round_t player);
int tc_player_round_receive_hand(tc_player_round_t player, const int hand13[13]);
int tc_player_round_set_position(tc_player_round_t player, int position, const int* cards, int cnt);
int tc_player_round_settle(tc_player_round_t player);
int tc_player_round_get_hand(tc_player_round_t player, int out_hand13[13]);
int tc_player_round_get_round_score(tc_player_round_t player);
int tc_player_round_get_total_score(tc_player_round_t player);
const char* tc_player_round_get_name(tc_player_round_t player);
int tc_player_round_has_achievement(tc_player_round_t player, int achievement);
/* -------------------- PlayerRound 扩展查询 -------------------- */
int tc_player_round_get_position_result(tc_player_round_t player, int position, HandResult* out);
int tc_player_round_get_net_score(tc_player_round_t player);
int tc_player_round_is_fouled(tc_player_round_t player);
int tc_player_round_is_homerun(tc_player_round_t player);
int tc_player_round_get_shoot_count(tc_player_round_t player);
/* -------------------- 牌型名称中文化 (names.cpp) -------------------- */
const char* tc_get_hand_name_zh(const char* en_name);
/* -------------------- 比较/结算 (closer.cpp) -------------------- */
int tc_compare_head_3cards(const int cards_a[3], const int cards_b[3]);
int tc_compare_five_cards(const int cards_a[5], const int cards_b[5]);
int tc_compare_hand_result(int rank_order_a, int rank_order_b);