flutter/lib/src/backend/thirteen/thirteen_ffi.dart


  static String _libPath() {
    // Android：直接由 System.loadLibrary 从 jniLibs 加载
    if (Platform.isAndroid) return 'libthirteen_cards_cpp.so';
    if (Platform.environment['CARDS_THIRTEEN_DLL'] case final env?) {
      if (File(env).existsSync()) return env;
    }
    try {
      final exeDir = File(Platform.resolvedExecutable).parent.path;
      for (final name in [
        'libthirteen_cards_cpp.dll',
        'runtime/libthirteen_cards_cpp.dll'
      ]) {
        final p = '$exeDir\\$name';
        if (File(p).existsSync()) return p;
      }
    } catch (_) {}
    final root = _cardsRoot;
    if (Platform.isWindows) {
      final fromRoot =
          '$root\\build\\libthirteen_cards_cpp.dll';
      if (File(fromRoot).existsSync()) return fromRoot;
    } else {
      final fromRoot =
          '$root/build/libthirteen_cards_cpp.so';
      if (File(fromRoot).existsSync()) return fromRoot;
    }
    if (Platform.isWindows) {
      if (Platform.environment['USERPROFILE'] case final home?) {
        final userPath =
            '$home\\cards\\Thirteen-Cards-main\\build\\libthirteen_cards_cpp.dll';
        if (File(userPath).existsSync()) return userPath;
      }
    } else {
      const fallback = '../build/libthirteen_cards_cpp.so';
      if (File(fallback).existsSync()) return fallback;
    }
    throw Exception(
      'Cannot find libthirteen_cards_cpp.(dll|so). '
      'Set CARDS_THIRTEEN_DLL or CARDS_ROOT environment variable.',
    );
  }

  // ================================================================
  //  牌型检测 (已有)
  // ================================================================

  static Map<String, dynamic> searchPattern(int position, List<int> cards) {
    if (cards.isEmpty)
      return {
        'position': position,
        'hand_name': 'Unknown',
        'rank_order': 0,
        'score': 0
      };
    final fn = lib.lookupFunction<TcSearchPatternC, TcSearchPatternDart>(
        'tc_search_pattern');
    final buf = calloc<Int32>(cards.length);
    for (var i = 0; i < cards.length; i++) buf[i] = cards[i];
    final result = fn(position, buf, cards.length);
    calloc.free(buf);
    final name =
        result.handName == nullptr ? 'Unknown' : result.handName.toDartString();
    return {
      'position': result.position,
      'hand_name': name,
      'rank_order': result.rankOrder,
      'score': result.score,
    };
  }

  // ================================================================
  //  DFS 枚举组合 (已有)
  // ================================================================

  static Map<String, dynamic> dfsEnumCombos(List<int> hand13, {int maxK = 64}) {
    final fn = lib.lookupFunction<TcDfsEnumCombosC, TcDfsEnumCombosDart>(
        'tc_dfs_enum_combos');
    final handBuf = calloc<Int32>(13);
    for (var i = 0; i < 13; i++) handBuf[i] = hand13[i];
    final out = calloc<TcDfsCandidateResult>(1);
    final rc = fn(handBuf, out, maxK);
    calloc.free(handBuf);
    if (rc != 0) {
      calloc.free(out);
      throw Exception('dfs_enum_combos returned $rc');
    }
    final isSpecial = out.ref.isSpecial != 0;
    final specialScore = out.ref.specialScore;
    final spName = isSpecial && out.ref.specialName != nullptr
        ? out.ref.specialName.toDartString()
        : '';
    final comboCount = out.ref.comboCount;
    final combos = <Map<String, dynamic>>[];
    for (var i = 0; i < comboCount && i < maxK; i++) {
      final c = out.ref.combos[i];
      final units = <Map<String, dynamic>>[];
      for (var u = 0; u < c.unitCount; u++) {
        final uData = c.units[u];
        final handName = uData.result.handName == nullptr
            ? ''
            : uData.result.handName.toDartString();
        units.add({
          'card_count': uData.cardCount,
          'cards': [for (var k = 0; k < uData.cardCount; k++) uData.cards[k]],
          'result': {
            'position': uData.result.position,
            'hand_name': handName,
            'rank_order': uData.result.rankOrder,
            'score': uData.result.score,
          },
        });
      }
      combos.add({
        'unit_count': c.unitCount,
        'units': units,
        'typed_score': c.typedScore,
        'loose_count': c.looseCount,
        'loose_cards': [for (var k = 0; k < c.looseCount; k++) c.looseCards[k]],
      });
    }
    calloc.free(out);
    return {
      'is_special': isSpecial,
      'special_score': specialScore,
      'special_name': spName,
      'combo_count': comboCount,
      'combos': combos,
    };
  }

  /// 原始 DFS 枚举 (不解析结构体，直接返回指针，供 AI 引擎传递到 onnx_helper)
  /// 调用方负责 free(handBuf) 和 free(out)
  static int dfsEnumCombosRaw(
      Pointer<Int32> handBuf, Pointer<TcDfsCandidateResult> out, int maxK) {
    final fn = lib.lookupFunction<TcDfsEnumCombosC, TcDfsEnumCombosDart>(
        'tc_dfs_enum_combos');
    return fn(handBuf, out, maxK);
  }

  // ================================================================
  //  牌比较 (已有)
  // ================================================================

  static int compareHead3(List<int> a, List<int> b) {
    final fn = lib.lookupFunction<TcCompareHead3C, TcCompareHead3Dart>(
        'tc_compare_head_3cards');
    return _compareCards(fn, a, b, 3);
  }

  static int compareFive(List<int> a, List<int> b) {
    final fn = lib.lookupFunction<TcCompareFiveC, TcCompareFiveDart>(
        'tc_compare_five_cards');
    return _compareCards(fn, a, b, 5);
  }

  static int _compareCards(int Function(Pointer<Int32>, Pointer<Int32>) fn,
      List<int> a, List<int> b, int n) {
    final bufA = calloc<Int32>(n);
    final bufB = calloc<Int32>(n);
    for (var i = 0; i < n; i++) {
      bufA[i] = a[i] % 52;
      bufB[i] = b[i] % 52;
    }
    final result = fn(bufA, bufB);
    calloc.free(bufA);
    calloc.free(bufB);
    return result;
  }

  static int compareHandResult(int roA, int roB) {
    final fn =
        lib.lookupFunction<TcCompareHandResultC, TcCompareHandResultDart>(
            'tc_compare_hand_result');
    return fn(roA, roB);
  }

  // ================================================================
  //  牌型名称中文化
  // ================================================================

  /// 查询牌型中文名，未找到时返回英文原名
  static String getHandNameZh(String enName) {
    final fn = lib.lookupFunction<TcGetHandNameZhC, TcGetHandNameZhDart>(
        'tc_get_hand_name_zh');
    final namePtr = enName.toNativeUtf8();
    final result = fn(namePtr);
    calloc.free(namePtr);
    return result == nullptr ? enName : result.toDartString();
  }

  // ================================================================
  //  PlayerRound 生命周期 (新增)
  // ================================================================

  /// 创建玩家对象
  static Pointer<Void> createPlayer(String name) {
    final fn =
        lib.lookupFunction<TcPlayerRoundCreateC, TcPlayerRoundCreateDart>(
            'tc_player_round_create');
    final namePtr = name.toNativeUtf8();
    final result = fn(namePtr);
    calloc.free(namePtr);
    return result;
  }

  /// 销毁玩家对象
  static void destroyPlayer(Pointer<Void> player) {
    final fn =
        lib.lookupFunction<TcPlayerRoundDestroyC, TcPlayerRoundDestroyDart>(
            'tc_player_round_destroy');
    fn(player);
  }

  /// 接收13张手牌（含特殊牌型自动检测）
  static int receiveHand(Pointer<Void> player, List<int> hand13) {
    assert(hand13.length == 13);
    final fn = lib.lookupFunction<TcPlayerRoundReceiveHandC,
        TcPlayerRoundReceiveHandDart>('tc_player_round_receive_hand');
    final buf = calloc<Int32>(13);
    for (var i = 0; i < 13; i++) buf[i] = hand13[i];
    final rc = fn(player, buf);
    calloc.free(buf);
    return rc;
  }

  /// 设置墩位（特殊牌型不可调用）
  static int setPosition(Pointer<Void> player, int position, List<int> cards) {
    assert(position >= 0 && position <= 2);
    assert(cards.length == (position == 0 ? 3 : 5));
    final fn = lib.lookupFunction<TcPlayerRoundSetPositionC,
        TcPlayerRoundSetPositionDart>('tc_player_round_set_position');
    final buf = calloc<Int32>(cards.length);
    for (var i = 0; i < cards.length; i++) buf[i] = cards[i];
    final rc = fn(player, position, buf, cards.length);
    calloc.free(buf);
    return rc;
  }

  /// 结算本局（返回本局原始得分）
  static int playerSettle(Pointer<Void> player) {
    final fn =
        lib.lookupFunction<TcPlayerRoundSettleC, TcPlayerRoundSettleDart>(
            'tc_player_round_settle');
    return fn(player);
  }

  /// 读取玩家原始13张手牌
  static List<int> getPlayerHand(Pointer<Void> player) {
    final fn =
        lib.lookupFunction<TcPlayerRoundGetHandC, TcPlayerRoundGetHandDart>(
            'tc_player_round_get_hand');
    final buf = calloc<Int32>(13);
    final rc = fn(player, buf);
    if (rc != 0) {
      calloc.free(buf);
      throw Exception('getPlayerHand returned $rc');
    }
    final result = [for (var i = 0; i < 13; i++) buf[i]];
    calloc.free(buf);
    return result;
  }

  /// 读取本局原始得分
  static int getRoundScore(Pointer<Void> player) {
    final fn = lib.lookupFunction<TcPlayerRoundGetRoundScoreC,
        TcPlayerRoundGetRoundScoreDart>('tc_player_round_get_round_score');
    return fn(player);
  }

  /// 读取累计总分
  static int getTotalScore(Pointer<Void> player) {
    final fn = lib.lookupFunction<TcPlayerRoundGetTotalScoreC,
        TcPlayerRoundGetTotalScoreDart>('tc_player_round_get_total_score');
    return fn(player);
  }

  /// 读取玩家名称
  static String getPlayerName(Pointer<Void> player) {
    final fn =
        lib.lookupFunction<TcPlayerRoundGetNameC, TcPlayerRoundGetNameDart>(
            'tc_player_round_get_name');
    final ptr = fn(player);
    return ptr == nullptr ? '' : ptr.toDartString();
  }

  /// 查询玩家是否拥有某成就
  static bool hasAchievement(Pointer<Void> player, int achievement) {
    final fn = lib.lookupFunction<TcPlayerRoundHasAchievementC,
        TcPlayerRoundHasAchievementDart>('tc_player_round_has_achievement');
    return fn(player, achievement) != 0;
  }

  // ================================================================
  //  PlayerRound 结算查询 (新增)
  // ================================================================

  /// 读取某墩的牌型结果（需在 closePlayers 之前调用）
  static Map<String, dynamic> getPositionResult(
      Pointer<Void> player, int position) {
    assert(position >= 0 && position <= 2);
    final fn = lib.lookupFunction<TcPlayerRoundGetPositionResultC,
            TcPlayerRoundGetPositionResultDart>(
        'tc_player_round_get_position_result');
    final out = calloc<THandResult>(1);
    final rc = fn(player, position, out);
    if (rc != 0) {
      calloc.free(out);
      return {
        'position': position,
        'hand_name': 'Unknown',
        'rank_order': 0,
        'score': 0
      };
    }
    final name = out.ref.handName == nullptr
        ? 'Unknown'
        : out.ref.handName.toDartString();
    final result = {
      'position': out.ref.position,
      'hand_name': name,
      'rank_order': out.ref.rankOrder,
      'score': out.ref.score,
    };
    calloc.free(out);
    return result;
  }

  /// 读取本局净得分（需在 closePlayers 之后调用）
  static int getNetScore(Pointer<Void> player) {
    final fn = lib.lookupFunction<TcPlayerRoundGetNetScoreC,
        TcPlayerRoundGetNetScoreDart>('tc_player_round_get_net_score');
    return fn(player);
  }

  /// 查询是否倒水（需在 closePlayers 之后调用）
  static bool isFouled(Pointer<Void> player) {
    final fn =
        lib.lookupFunction<TcPlayerRoundIsFouledC, TcPlayerRoundIsFouledDart>(
            'tc_player_round_is_fouled');
    return fn(player) != 0;
  }

  /// 查询是否全垒打（需在 closePlayers 之后调用）
  static bool isHomerun(Pointer<Void> player) {
    final fn =
        lib.lookupFunction<TcPlayerRoundIsHomerunC, TcPlayerRoundIsHomerunDart>(
            'tc_player_round_is_homerun');
    return fn(player) != 0;
  }

  /// 读取打枪次数（需在 closePlayers 之后调用）
  static int getShootCount(Pointer<Void> player) {
    final fn = lib.lookupFunction<TcPlayerRoundGetShootCountC,
        TcPlayerRoundGetShootCountDart>('tc_player_round_get_shoot_count');
    return fn(player);
  }
